@@ -6,7 +6,7 @@ Build-Depends: gettext, make (>= 3.80-1), dpkg-dev (>= 1.13.5), debianutils, tar
  linux-kernel-headers (>= 2.6.13+0rc3-2) [!hurd-i386 !kfreebsd-i386],
  mig (>= 1.3-2) [hurd-i386], hurd-dev (>= 20020608-1) [hurd-i386], gnumach-dev [hurd-i386],
  kfreebsd-kernel-headers [kfreebsd-i386],
- gcc-4.0 [!powerpc !m68k !hppa !hurd-i386], gcc-3.4 (>= 3.4.4-6) [powerpc], gcc-3.4 [m68k hppa], gcc-3.3 [hurd-i386], binutils (>= 2.16.1cvs20051109-1),
+ gcc-4.0 [!m68k !hppa !hurd-i386], gcc-3.4 [m68k hppa], gcc-3.3 [hurd-i386], binutils (>= 2.16.1cvs20051109-1),
  autoconf, sed (>= 4.0.5-4), gawk, debhelper (>= 4.1.76),
  libc6-dev-amd64 [i386], libc6-dev-ppc64 [powerpc],
  quilt
