@@ -72,6 +72,7 @@ glibc (2.3.6-2) UNRELEASED; urgency=low
     - Use policy compliant links in libc6-dev-amd64
     - Use an absolute symlink for /lib64 on amd64
   * Add myself to Uploaders.
+  * Switch to gcc-4.0 on powerpc.
 
  -- Clint Adams <schizo@debian.org>  Sun, 12 Feb 2006 11:04:38 -0500
 
